tests/ui/include_value_not_from_bytes.nightly.stderr
error[E0463]: can't find crate for `zerocopy_derive` which `zerocopy` depends on
 --> $DIR/../include.rs:9:1
  |
9 | extern crate zerocopy;
  | ^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
